<resources>
    <string name="app_name">KarrosMovie</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="Trending">Trending</string>
    <string name="Category">Category</string>
    <string name="Popular">Popular</string>
    <string name="Top_rated">Top rated</string>
    <string name="Upcoming">Upcoming</string>
</resources>